# ctrans2-rs

./: Cargo.toml  README.md  build.rs
cpp/: generator.cc  translator.cpp
example/generator/: Cargo.toml  README.md
example/generator/src/: main.rs
include/: blobstore.h  convert.h  generator.h  translator.h
src/: config.rs  lib.rs
src/cpp/: generator.cc  translator.cpp  whisp.cc  whisper.cpp
src/generator/: generator.rs  mod.rs
src/translator/: mod.rs  translator.rs
